--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_joining_family_nvn.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_joining_family_nvn.erb
@@ -13,6 +13,10 @@
   ##If you’re staying longer than 6 months
   The visa you apply for depends on your family member’s situation. You can work or study if your application is successful.
 
+  <% if calculator.passport_country_is_hong_kong_british_national_overseas? %>
+    ^You can also apply for a [British National Overseas (BNO) visa](/british-national-overseas-bno-visa/). It’s cheaper than a family visa or applying as a ‘dependant’ on your partner or parent’s work or study visa.
+  <% end%>
+
   ###Your family is settled in the UK
   You may be able to apply for a [family visa](/uk-family-visa) if your family member or partner:
 
