--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_marriage_nvn_ukot.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_marriage_nvn_ukot.erb
@@ -5,7 +5,13 @@
 <% govspeak_for :body do %>
   Apply for a [Marriage Visitor visa](/marriage-visa) if you and your partner want to get married or enter into a civil partnership in the UK.
 
-  If you want to live in the UK permanently, you must apply for a [family visa](/join-family-in-uk) if your partner:
+  <% if calculator.passport_country_is_hong_kong_british_national_overseas? %>
+    If you want to live in the UK permanently, you can apply for a [British National Overseas (BNO) visa](/british-national-overseas-bno-visa/).
+
+    You can also apply for a family visa, but the application fee is higher. You’re eligible for a family visa if your partner:
+  <% else %>
+    If you want to live in the UK permanently, you must apply for a [family visa](/join-family-in-uk) if your partner:
+  <% end %>
 
   + is a British citizen
   + is settled in the UK (called having ‘indefinite leave to remain’)
