--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_study_y.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_study_y.erb
@@ -12,4 +12,12 @@
   If you’re coming to study on a further or higher education course, apply for a [Student visa](/student-visa).
 
   Or if you’re aged 4 to 17 and coming to study at an independent school, apply for a [Child Student visa](/child-study-visa).
+
+  <% if calculator.passport_country_is_hong_kong_british_national_overseas? %>
+    You can also study with a [British National Overseas (BNO) visa](/british-national-overseas-bno-visa/). Unlike other study visas, you can:
+
+    + apply without an offer of a place on a course
+    + change your course or start a new one without telling the Home Office
+    + settle permanently in the UK after 5 years
+  <% end %>
 <% end %>
