--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_work_n.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_work_n.erb
@@ -64,6 +64,10 @@
 
   ##If you want to do paid work in the UK
 
+  <% if calculator.passport_country_is_hong_kong_british_national_overseas? %>
+    You can apply for a [British National Overseas (BNO) visa](/british-national-overseas-bno-visa/) to live, work and study in the UK. You do not need a job offer to apply, unlike most work visas. You can do any type of work (except work as a professional sportsperson or sports coach).
+  <% end %>
+
   You must apply for a visa if you want to work:
 
   * as a [volunteer](/temporary-worker-charity-worker-visa)
